--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/404 error with portals-pana.svg" />
+    <link rel="icon" type="image/svg+xml" href="/joscript-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joscript App</title>
     <link rel="stylesheet" href="./src/app/style.css">
